--- a/components/header.html
+++ b/components/header.html
@@ -18,7 +18,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#ptn" class="dropdown-card card-yellow">
+                            <a href="/lolos-ptn-favorit/" class="dropdown-card card-yellow">
                                 <h4>Persiapan Masuk PTN Favorit</h4>
                                 <p>Program spesialis lulus seleksi program studi Kedokteran</p>
                             </a>
@@ -35,12 +35,12 @@
                 <li><a href="/blogs/" class="nav-link">Blog</a></li>
             </ul>
 
-            <a href="#contact" class="btn btn-kontak btn-kontak-desktop">Kontak Kami</a>
-            <div class="hamburger">
+            <a href="/kontak-kami/" class="btn btn-kontak btn-kontak-desktop">Kontak Kami</a>
+            <!-- <div class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </div> -->
         </div>
     </nav>
 </header>
